# erm-rust

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  IMPROVEMENTS.md  MIGRATION.md  README.md  REVIEW.md  TODO.md
.github/workflows/: ci.yml
audits/: consensus_prelim.json  gemini_audit.json  opus_audit.json  opus_summary.md
docs/: ASSESSMENT_scaling_to_complex_output.md  ERM_EXPLAINED.md  GUIDE_how_erm_gets_to_complex_output.md  OPERATOR_MEMORY.md  aim-training-control-plan.md  architecture-plan.md  comparison.md  diffusion-generation-todo.md  gemini-audit.md  gpu-setup.md  math.md  shapes.md  training-milestones-3050.md  vast-5090-colocation-plan.md
erm-cli/: Cargo.toml
erm-cli/src/: main.rs
erm-core/: Cargo.toml
erm-core/src/: ants.rs  bpe_tokenizer.rs  burn_scorer.rs  config.rs  corruption.rs  error.rs  graph.rs  lib.rs  merge.rs  pheromone.rs  refinement.rs  scorer.rs  tokenizer.rs  topk.rs  types.rs
erm-train/: Cargo.toml
erm-train/src/: bench.rs  bridge.rs  burn_training.rs  colony_orchestrator.rs  colony_training.rs  comparison.rs  dataset.rs  diffusion_training.rs  eval.rs  graph_health.rs  graph_snapshot.rs  image_dataset.rs  lib.rs  metrics.rs  muon_adam.rs  orchestrator.rs  render_graph.rs  streaming_dataset.rs  training.rs
experiments/: README.md  STATUS.json  check-status.sh  erm-experiments.json  erm-experiments.yaml  gen.py  generate-manifests.py  generate-manifests.sh  status.py  train-script.sh.tpl  watch-status.py
experiments/tracking/: theory-tracker.json
k8s/: aim-watcher-v2.yaml  alice-run-job.yaml  erm-alice-run-4gib.yaml  erm-alice-run-b1.yaml  erm-alice-run-m100k.yaml  erm-alice-run-m1m-v2.yaml  erm-alice-run-m1m-v6-sharded-3phase.yaml  erm-alice-run-m1m-v7-i04-r1-resume.yaml  erm-alice-run-m1m-v7-i05-r1-resume.yaml  erm-alice-run-m1m-v7-i07-r1-resume.yaml  erm-alice-run-m1m-v7-i08-r1-resume.yaml  erm-alice-run-m1m-v7-i09-r1-resume.yaml  erm-alice-run-m1m-v7-i10-r1-resume.yaml  erm-alice-run-m1m-v7-i11-r1-reasoning-resume.yaml  erm-alice-run-m1m-v7-i12-r1-reasoning-answeronly-resume.yaml  erm-alice-run-m1m-v7-i13-r1-reasoning-answeronly-resume.yaml  erm-alice-run-m1m-v7-i14-r1-english-completion-resume.yaml  erm-alice-run-m1m-v7-sharded-3phase.yaml  erm-alice-run-m1m.yaml  erm-books-train-final.yaml  erm-books-train-gpu.yaml  erm-books-train-robust.yaml  erm-books-train-simple.yaml  erm-books-train-v1.yaml  erm-builder-pod.yaml  erm-colony-train-v1.yaml  erm-colony-train-v2.yaml  erm-train-v2.yaml  erm-train-v3.yaml  erm-train.yaml  run_books_train.sh  rust-builder.yaml
k8s/experiments/: exp-a.yaml  exp-b.yaml  exp-c.yaml  exp-d.yaml  exp-e.yaml  exp-f.yaml  generate.py
scripts/: aim-setup-dashboards.py  aim-watcher-v2.py  build-universal-vocab.py  curriculum-supervisor.sh  prepare-million-english-numbers.py  prepare-reasoning-corpus.py  run-diffusion-milestone.sh  run-reasoning-resume.sh  test-curriculum.sh
skills/experiment-tracking/: SKILL.md
