[package]
name = "erm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, graph, scorer, corruption, and ant colony for the Emergent Route Model"

[dependencies]
burn = { workspace = true }
burn-ndarray = { workspace = true }
burn-autodiff = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
